--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -331,125 +331,60 @@
               </div>
 
               <div class="mb-2" id="badmintonSecondPlayerCnicImageDiv">
-                <label for="badmintonSecondPlayerCnicImage" class="form-label"
-                  >Player CNIC
+                <label for="badmintonSecondPlayerCnicImage" class="form-label">Player CNIC
                   <span class="badge text-danger fs-20">*</span>
                 </label>
-                <input
-                  type="file"
-                  class="form-control"
-                  name="badmintonSecondPlayerCnicImage"
-                  id="badmintonSecondPlayerCnicImage"
-                  accept="image/png,image/PNG, image/jpg, image/jpeg"
-                />
-                <span class="text-body-secondary fs-14 mt-3"
-                  >Only PNG, JPEG, JPG images accepted</span
-                >
+                <input type="file" class="form-control" name="badmintonSecondPlayerCnicImage" id="badmintonSecondPlayerCnicImage"
+                  accept="image/png,image/PNG, image/jpg, image/jpeg" />
+                <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>
               </div>
 
-              <div
-                class="badmintonSecondPlayerSocialEventDiv"
-                id="badmintonSecondPlayerSocialEventDiv"
-                style="display: none"
-              >
-                <label
-                  for="badmintonSecondPlayerAttendSocialEvent"
-                  class="form-label"
-                  >Does the player wish to attend the social event?
+              <div class="badmintonSecondPlayerSocialEventDiv" id="badmintonSecondPlayerSocialEventDiv" style="display: none">
+                <label for="badmintonSecondPlayerAttendSocialEvent" class="form-label">Does the player wish to attend the social
+                  event?
                   <span class="badge text-danger fs-20">*</span>
                 </label>
                 <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="badmintonSecondPlayerAttendSocialEvent"
-                    value="yes"
-                    id="badmintonSecondPlayerAttendSocialEventYes"
-                  />
-                  <label
-                    class="form-check-label"
-                    for="badmintonSecondPlayerAttendSocialEventYes"
-                    >Yes</label
-                  >
+                  <input class="form-check-input" type="radio" name="badmintonSecondPlayerAttendSocialEvent" value="yes"
+                    id="badmintonSecondPlayerAttendSocialEventYes" />
+                  <label class="form-check-label" for="badmintonSecondPlayerAttendSocialEventYes">Yes</label>
                 </div>
                 <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="badmintonSecondPlayerAttendSocialEvent"
-                    value="no"
-                    id="badmintonSecondPlayerAttendSocialEventNo"
-                  />
-                  <label
-                    class="form-check-label"
-                    for="badmintonSecondPlayerAttendSocialEventNo"
-                    >No</label
-                  >
+                  <input class="form-check-input" type="radio" name="badmintonSecondPlayerAttendSocialEvent" value="no"
+                    id="badmintonSecondPlayerAttendSocialEventNo" />
+                  <label class="form-check-label" for="badmintonSecondPlayerAttendSocialEventNo">No</label>
                 </div>
               </div>
+
             </div>
           </div>
 
           <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              name="TableTennis"
-              value="TableTennis"
-              id="TableTennis"
-            />
+            <input class="form-check-input" type="checkbox" name="TableTennis" value="TableTennis" id="TableTennis" />
             <label class="form-check-label" for="TableTennis">
               Table-Tennis (Single)
             </label>
           </div>
 
           <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              name="BoardGames"
-              value="BoardGames"
-              id="BoardGames"
-            />
+            <input class="form-check-input" type="checkbox" name="BoardGames" value="BoardGames" id="BoardGames" />
             <label class="form-check-label" for="BoardGames">
               Board Games
             </label>
           </div>
-          <div
-            class="mb-3 ms-4 border-start ps-2"
-            id="BoardGamesDiv"
-            style="display: none"
-          >
+          <div class="mb-3 ms-4 border-start ps-2" id="BoardGamesDiv" style="display: none">
             <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                name="Ludo"
-                value="Ludo"
-                id="Ludo"
-              />
+              <input class="form-check-input" type="checkbox" name="Ludo" value="Ludo" id="Ludo" />
               <label class="form-check-label" for="Ludo"> Ludo (Single) </label>
             </div>
             <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                name="Chess"
-                value="Chess"
-                id="Chess"
-              />
+              <input class="form-check-input" type="checkbox" name="Chess" value="Chess" id="Chess" />
               <label class="form-check-label" for="Chess">
                 Chess (Single)
               </label>
             </div>
             <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                name="Carrom"
-                value="Carrom"
-                id="Carrom"
-              />
+              <input class="form-check-input" type="checkbox" name="Carrom" value="Carrom" id="Carrom" />
               <label class="form-check-label" for="Carrom">
                 Carrom (Single)
               </label>
@@ -457,108 +392,59 @@
           </div>
 
           <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              name="EGaming"
-              value="EGaming"
-              id="EGaming"
-            />
+            <input class="form-check-input" type="checkbox" name="EGaming" value="EGaming" id="EGaming" />
             <label class="form-check-label" for="EGaming"> E-Gaming </label>
           </div>
-          <div
-            class="mb-3 ms-4 border-start ps-2"
-            id="EGamingDiv"
-            style="display: none"
-          >
+
+          <div class="mb-3 ms-4 border-start ps-2" id="EGamingDiv" style="display: none">
             <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                name="Tekken"
-                value="Tekken"
-                id="Tekken"
-              />
+              <input class="form-check-input" type="checkbox" name="Tekken" value="Tekken" id="Tekken" />
               <label class="form-check-label" for="Tekken">
                 Tekken (Single)
               </label>
             </div>
             <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                name="Fifa"
-                value="Fifa"
-                id="Fifa"
-              />
+              <input class="form-check-input" type="checkbox" name="Fifa" value="Fifa" id="Fifa" />
               <label class="form-check-label" for="Fifa"> Fifa (Single) </label>
             </div>
           </div>
 
           <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              name="ParliamentarySummit"
-              value="ParliamentarySummit"
-              id="ParliamentarySummit"
-            />
+            <input class="form-check-input" type="checkbox" name="ParliamentarySummit" value="ParliamentarySummit"
+              id="ParliamentarySummit" />
             <label class="form-check-label" for="ParliamentarySummit">
               Parliamentary Summit
             </label>
           </div>
-          <div
-            id="ParliamarySummitDiv"
-            class="mb-3 ms-4 border-start ps-2"
-            style="display: none"
-          >
+
+          <div id="ParliamarySummitDiv" class="mb-3 ms-4 border-start ps-2" style="display: none">
             <div class="mb-3 mt-2">
               <label for="experience" class="form-label">Previous MUN/PNA Experience</label>
               <input type="number" class="form-control" id="experience" name="experience" />
             </div>
-
+          
             <div class="mb-3 mt-2">
-              <label for="LeaderOfHouse" class="form-label"
-                >Are you expecting to be leader of the house?</label
-              >
+              <label for="LeaderOfHouse" class="form-label">Are you expecting to be leader of the house?</label>
               <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="LeaderOfHouse"
-                  value="yes"
-                  id="LeaderOfHouseYes"
-                />
-                <label class="form-check-label" for="LeaderOfHouseYes"
-                  >Yes</label
-                >
+                <input class="form-check-input" type="radio" name="LeaderOfHouse" value="yes" id="LeaderOfHouseYes" />
+                <label class="form-check-label" for="LeaderOfHouseYes">Yes</label>
               </div>
               <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="LeaderOfHouse"
-                  value="no"
-                  id="LeaderOfHouseNo"
-                />
+                <input class="form-check-input" type="radio" name="LeaderOfHouse" value="no" id="LeaderOfHouseNo" />
                 <label class="form-check-label" for="LeaderOfHouseNo">No</label>
               </div>
             </div>
           </div>
+
         </div>
+        
         <div class="mb-3 mt-2">
-          <label for="ambassador" class="form-label"
-            >Ambassador
-            <span class="text-body-secondary small">(optional)</span></label
-          >
-          <input
-            type="text"
-            class="form-control"
-            name="ambassador"
-            id="ambassador"
-            placeholder="Enter name of ambassador (if any)"
-          />
+          <label for="ambassador" class="form-label">Ambassador
+            <span class="text-body-secondary small">(optional)</span></label>
+          <input type="text" class="form-control" name="ambassador" id="ambassador"
+            placeholder="Enter name of ambassador (if any)" />
         </div>
+
       </div>
     </div>
     <div class="mb-4 mt-4" id="TotalPriceDiv">
