--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -7,6 +7,7 @@ body {
   font-family: "Open Sans", sans-serif;
   background: #f6f9ff;
   color: #444444;
+  overflow-y: scroll;
 }
 
 a {
@@ -593,7 +594,120 @@ h6 {
   max-width: 60px;
 }
 
+.logout-button{
+  margin-right: 15px;
+}
 
+
+
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.9); 
+}
+.modal-content {
+  position: relative; 
+  margin: auto;
+  top: 30px;
+  max-width: 550px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.4s;
+  animation-name: zoom;
+  animation-duration: 0.4s;
+  
+}
+
+
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)} 
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)} 
+  to {transform:scale(1)}
+}
+.close {
+  position: absolute;
+  z-index: 9999;
+  top: 1px;
+  right: 10px;
+  color: #181616;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #615d5d;
+  text-decoration: none;
+  cursor: pointer;
+}
+.img{
+  transition: 0.4s ease-in-out;
+  cursor: pointer;
+}
+.img:hover{
+  filter: brightness(30%);
+}
+
+.detail {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.detail strong {
+  width: 200px;
+  margin-right: 10px;
+  font-weight: bold;
+  
+}
+
+.detail img {
+  margin-left: 10px;
+}
+
+.detail span {
+  flex: 8;
+}
+
+
+.selected-sports {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sport-tag {
+  background-color: #f0f0f0;
+  color: #333;
+  padding: 5px 10px;
+  border-radius: 20px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.sport-tag:hover {
+  background-color: #e0e0e0;
+}
+
+.sport-tag:last-child {
+  margin-right: 0;
+}
 
 
 
