--- a/views/admin/components/header.ejs
+++ b/views/admin/components/header.ejs
@@ -1,21 +1,50 @@
-  <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top d-flex align-items-center">
+<div class="container">
+  <header id="header" class="header fixed-top d-flex align-items-center justify-content-between">
 
-    <div class="d-flex align-items-center justify-content-between">
+    <div class="d-flex align-items-center">
       <a href="/admin-panel" class="logo d-flex align-items-center">
         <img src="img/logo.png" alt="">
         <span style="color: #78191c;" class="d-none d-lg-block">IMOlympiad <span style="color: #243064;">Admin</span></span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
-    </div><!-- End Logo -->
-
+    
+  
     <div class="search-bar">
       <form class="search-form d-flex align-items-center" method="POST" action="#">
         <input type="text" name="query" placeholder="Search" title="Enter search keyword">
         <button type="submit" title="Search"><i class="bi bi-search"></i></button>
       </form>
     </div><!-- End Search Bar -->
-
+  </div>
+  
    
-
+    <!-- Logout Button -->
+    <div class="logout-button">
+      <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#logoutModal"><i class="bi bi-box-arrow-left"></i>
+        Logout</a>
+    </div><!-- End Logout Button -->
+  
   </header><!-- End Header -->
+</div>
+
+
+
+
+<!-- Logout Modal -->
+<div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog ">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Confirmation</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to logout?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <a href="/logout" class="btn btn-danger">Logout</a>
+      </div>
+    </div>
+  </div>
+</div>
