Change to user detail page

--- a/views/admin/components/userDetail.ejs
+++ b/views/admin/components/userDetail.ejs
@@ -318,6 +318,10 @@
                             <strong>Ambassador</strong>
                             <span>Talha</span>
                         </div>
+                        <div class="detail border-bottom pb-3 mt-3">
+                            <strong>Total Amount</strong>
+                            <span>RS. 7500</span>
+                        </div>
                         <div class="detail border-bottom pb-3">
                             <strong>Payment Screenshot:</strong>
                             <img src="img/payment.jpg" class="img-thumbnail img" alt="Payment Screenshot" width="40" height="20" onclick="openModal('img/payment.jpg')">
