worked on few things

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -72,7 +72,7 @@
  </div>
 <!-- bradcam_area end -->
 
-<div class="container">
+<div style="text-align: center;" class="container">
     <div class="countdown-timer mt-2 mx-auto" id="countdownTimer">
         <p><b><span class="emoji">📅</span> Time Remaining for registration is <span id="countdown"></span> <span class="emoji">⏰</span></b></p>
     </div>
