--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -367,7 +367,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 
- <!-- <script>
+ <script>
    // Set the deadline date (replace with your desired deadline date)
 const deadline = new Date('February 28, 2024 23:59:59').getTime();
 
@@ -397,7 +397,7 @@ function updateCountdown() {
     }
 }
 
-</script>  -->
+</script> 
 
 
 </body>
