getting total registrations

--- a/views/admin/admin-panel.ejs
+++ b/views/admin/admin-panel.ejs
@@ -71,12 +71,12 @@
         <div class="col-lg-8">
           <div class="row">
 
-            <!-- Sales Card -->
+            <!-- Registration Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
 
                 <div class="card-body">
-                  <h5 class="card-title">Registrations <span>| Today</span></h5>
+                  <h5 class="card-title">Total Registrations <span>|   <%= registrationsCount %></span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -90,7 +90,7 @@
                 </div>
 
               </div>
-            </div><!-- End Sales Card -->
+            </div><!-- End Registration Card -->
 
             <!-- Revenue Card -->
             <div class="col-xxl-4 col-md-6">
