user details page

--- a/views/admin/components/usersTable.ejs
+++ b/views/admin/components/usersTable.ejs
@@ -33,7 +33,7 @@
                                 <td><%=user.name%></td>
                                 <td><%=user.is_ims_student%></td>
                                 <td><%=user.contact_number%></td>
-                                <td><a href="/user-detail" type="button" class="trigger btn btn-details"><i class="bi bi-person-lines-fill"></i></a></td>
+                                <td><a href="/registered-users/user-details/<%=user._id%>" type="button" class="trigger btn btn-details"><i class="bi bi-person-lines-fill"></i></a></td>
                             </tr>
                         <% } %>
                     <% } %>
