worked over admin panel

--- a/views/admin/admin-panel.ejs
+++ b/views/admin/admin-panel.ejs
@@ -99,7 +99,7 @@
                 
 
                 <div class="card-body">
-                  <h5 class="card-title">Total visits <span>| This Month</span></h5>
+                  <h5 class="card-title">Total visits <span>| 250</span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -113,30 +113,7 @@
             </div><!-- End Revenue Card -->
 
             <!-- Customers Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card">
-
-              
-
-                <div class="card-body">
-                  <h5 class="card-title">Customers <span>| This Year</span></h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-people"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>1244</h6>
-                      <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
-
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-
-            </div><!-- End Customers Card -->
+            
 
             <!-- Reports -->
             <div class="col-12">
@@ -145,7 +122,7 @@
                
 
                 <div class="card-body">
-                  <h5 class="card-title">Reports <span>/Today</span></h5>
+                  <h5 class="card-title">Reports</h5>
 
                   <!-- Line Chart -->
                   <div id="reportsChart"></div>
@@ -154,15 +131,12 @@
                     document.addEventListener("DOMContentLoaded", () => {
                       new ApexCharts(document.querySelector("#reportsChart"), {
                         series: [{
-                          name: 'Sales',
-                          data: [31, 40, 28, 51, 42, 82, 56],
+                          name: 'Registration',
+                          data: [8, 5, 7, 2, 3, 5, 4],
                         }, {
-                          name: 'Revenue',
-                          data: [11, 32, 45, 32, 34, 52, 41]
-                        }, {
-                          name: 'Customers',
-                          data: [15, 11, 32, 18, 9, 24, 11]
-                        }],
+                          name: 'Visits',
+                          data: [60, 40, 50, 30, 50, 20]
+                        },],
                         chart: {
                           height: 350,
                           type: 'area',
