--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -95,6 +95,11 @@
             <p id="cnicError" class="text-danger small"></p>
         </div>
 
+        <div class="mb-3">
+          <label for="">Use this link for reducing your image size.</label>
+          <a href="https://www.iloveimg.com/compress-image" class="mt-2">https://www.iloveimg.com/compress-image</a>
+        </div>
+
 
         <div class="mb-3 mt-2" id="cnicImageDiv" style="display: none">
             <label for="cnicImage" class="form-label">Upload CNIC Picture
