worked over sponsors

--- a/views/components/sponsor.ejs
+++ b/views/components/sponsor.ejs
@@ -1,35 +1,30 @@
 <div style="background: black;" class="brand_area">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="section_title text-center mb-80">
-            <h4
-              class="wow fadeInRight"
-              data-wow-duration="1s"
-              data-wow-delay=".3s"
-            >
-              Sponsor Logos
-            </h4>
+  <div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item text-center active">
+            <img src="img/brand/1.png" class="" alt="">
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="brand_wrap">
-            <div class="brand_active owl-carousel">
-              <div class="single_brand mb-5 text-center">
-                <img src="img/brand/1.png" alt="" />
-              </div>
-              <div class="single_brand mb-5 text-center">
-                <img src="img/brand/2.png" alt="" />
-              </div>
-              <div class="single_brand mb-5 text-center">
-                <img src="img/brand/3.png" alt=""  />
-              </div>
-            </div>
+          <div class="carousel-item text-center">
+            <img src="img/brand/2.png"  class="" alt="">
           </div>
+          <div class="carousel-item text-center">
+            <img src="img/brand/3.png"  class="" alt="">
+          </div>
+          <!-- End of content replacement -->
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
   </div>
-
+</div>
+</div>
