--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -32,6 +32,10 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/venue">Venue</a>
                   </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="/gallery">Gallery</a>
+                  </li>
                 </ul>
               </div>
           
