--- a/views/thankyou.ejs
+++ b/views/thankyou.ejs
@@ -54,6 +54,14 @@
         <a href="/" class="book_btn">Back to Homepage</a>
     </div>
 
+    <div id="whatsappChat">
+        <p style="color: black !important; background: white !important; " class="chatToolTip" id="chatToolTip">Help? Contact us for assistance.</p>
+        <div id="closeBtn">x</div>
+        <a class="btn" href="https://wa.me/+923349196224" target="_blank">
+            <img class="whatsappIcon" src="img/whatsapp-logo.jpg" width="50" height="50">
+        </a>
+    </div>
+
 </body>
 
 </html>
