--- a/views/admin/components/usersTable.ejs
+++ b/views/admin/components/usersTable.ejs
@@ -21,6 +21,7 @@
                         <th scope="col">Name </th>
                         <th scope="col">IMS Student</th>
                         <th scope="col">Contact Number</th>
+                        <th scope="col">Registered as</th>
                         <th scope="col">Details</th>
 
                     </tr>
@@ -33,6 +34,7 @@
                                 <td><%=user.name%></td>
                                 <td><%=user.is_ims_student%></td>
                                 <td><%=user.contact_number%></td>
+                                <td><%=user.register_as%></td>
                                 <td><a href="/registered-users/user-details/<%=user._id%>" type="button" class="trigger btn btn-details"><i class="bi bi-person-lines-fill"></i></a></td>
                             </tr>
                         <% } %>
