fixed event details

--- a/views/components/programDetails.ejs
+++ b/views/components/programDetails.ejs
@@ -21,7 +21,9 @@
                             <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <img src="img/program_details/1.png" alt="">
                             </div>
-                            <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Flute Performance, Rabab Performance, Two types organised Attans, Main qawali</h4>
+                            <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Qawalli Night -  6:30 sharp till 9:00-9:30</h4>
+                            <h4 class="wow fadeInRight mt-2" data-wow-duration="1s" data-wow-delay=".6s"> 	Food stalls and a lot of Photo booths will be available
+                            </h4>
                         </div>
                     </div>
                     <div class="single_propram">
@@ -34,8 +36,9 @@
                             <div class="thumb wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                                 <img src="img/program_details/2.png" alt="">
                             </div>
-                            <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s"> Old Money ft Pakistani Edition - 6:00PM to 9:30PM</h4>
-                            <h4 class="wow fadeInRight mt-2" data-wow-duration="1s" data-wow-delay=".6s"> Skit Performances, Old School Vibe, Activities & Games, Two Performances by artists and bands(Surprise)</h4>
+                            <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s"> Shpa da Rangoono - 6:00PM to 9:30PM</h4>
+                            <h4 class="wow fadeInRight mt-2" data-wow-duration="1s" data-wow-delay=".6s"> Musical night and funky spring vibes
+                            </h4>
 
                         </div>
                     </div>
